# evacuation-claude

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  wrangler.toml
.wrangler/cache/: wrangler-account.json
analysis/: README.md  a3_balance.wls  a3_zone_proof.wls  czyzowicz_lb.wls  lb_combined_proof.wls  lb_refined_symbolic.wls  lb_theorem.wls  lb_uniform_bound.wls  priority_n1.wls  priority_n2.wls
experiments/: a3_diagnose.py  a3_local_search.py  a3_optimize.py  a3_verify.py  brandt_f2f.py  evac_sim.py  family_c.py  family_d.py  family_e.py  family_f.py  fig_a3_algorithm.py  fig_problem_setup.py  fig_worst_cases.py  lb_combined.py  lb_minimax.py  lb_minimax_sweep.py  lb_minimax_v2.py  lb_refined.py  lb_refined_a3.py  lb_test_conjecture.py  lb_uniform.py  lb_uniform_broad.py  priority_n1.py  priority_n1_search.py  wireless_k3.py  wireless_k3_opt.py  wireless_k3_opt2.py
notes/: lb-refinement.md  papers.md
paper/: build.sh  main.tex  refs.bib
site/: .assetsignore  build.sh  index.html  main.js  styles.css
